Added a new path in the router and a new endpoint. A new repository Users and a new entity user have been created. Added the ability to register a user in the service.
